--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ playground.xcworkspace
 
 # Visual Studio Code
 .vscode
+.devcontainer
 
 ## Swift Package Manager
 Packages
@@ -48,3 +49,8 @@ fastlane/[Pp]review.html
 
 ## Dotenv
 .env.local
+
+## Build / Deploy Directories
+build/
+deploy/
+output/
