Added reusable CI workflows

--- a/.github/workflows/swift_test_vapor_package.yml
+++ b/.github/workflows/swift_test_vapor_package.yml
@@ -1,17 +1,15 @@
-name: Tests
+name: Swift Test (Vapor Package)
+
+# Tests a Vapor package for Swift 5.5+ (for concurrency support) and greater on macOS and Linux.
 
 on:
-  workflow_dispatch:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_call:
 
 jobs:
   prepare:
-    uses: swift-kipple/Tools/.github/workflows/prepare.yml
+    uses: ./.github/workflows/prepare.yml
   swift_test_apple:
-    uses: swift-kipple/Tools/.github/workflows/swift_test_apple.yml
+    uses: ./.github/workflows/swift_test_apple.yml
     needs: [prepare]
     strategy:
       fail-fast: false
@@ -24,7 +22,7 @@ jobs:
       platform: macOS
       build_method: swift
   swift_test_linux:
-    uses: swift-kipple/Tools/.github/workflows/swift_test_linux.yml
+    uses: ./.github/workflows/swift_test_linux.yml
     needs: [prepare]
     strategy:
       fail-fast: false
