--- a/.github/workflows/swift_test_apple.yml
+++ b/.github/workflows/swift_test_apple.yml
@@ -43,7 +43,7 @@ jobs:
         run: swift --version
       - name: Run Tests
         # TODO: the --output command here is brittle since it can pass an empty string and break the next argument.
-        run: bash ./scripts/swift_test.sh --method ${{ inputs.build_method }} --platform ${{ inputs.platform }} --output ${{ inputs.output_directory }}
+        run: bash <( curl https://raw.githubusercontent.com/swift-kipple/Tools/main/scripts/swift_test.sh) --method ${{ inputs.build_method }} --platform ${{ inputs.platform }} --output ${{ inputs.output_directory }}
       - name: Upload Step Output
         uses: actions/upload-artifact@v1
         if: always()
