Referencing other source

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,9 +9,9 @@ on:
 
 jobs:
   prepare:
-    uses: swift-kipple/Tools/.github/workflows/prepare.yml@main
+    uses: bdrelling/workflows/.github/workflows/prepare.yml@main
   swift_test_apple:
-    uses: swift-kipple/Tools/.github/workflows/swift_test_apple.yml@main
+    uses: bdrelling/workflows/.github/workflows/swift_test_apple.yml@main
     needs: [prepare]
     strategy:
       fail-fast: false
@@ -24,7 +24,7 @@ jobs:
       platform: macOS
       build_method: swift
   swift_test_linux:
-    uses: swift-kipple/Tools/.github/workflows/swift_test_linux.yml@main
+    uses: bdrelling/workflows/.github/workflows/swift_test_linux.yml@main
     needs: [prepare]
     strategy:
       fail-fast: false
