--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,39 +8,7 @@ on:
     branches: [main]
 
 jobs:
-  prepare:
-    uses: bdrelling/workflows/.github/workflows/prepare.yml@main
-  swift_test_apple:
-    uses: bdrelling/workflows/.github/workflows/swift_test_apple.yml@main
-    needs: [prepare]
-    strategy:
-      fail-fast: false
-      matrix:
-        xcode_version:
-          - 13.2 # swift 5.5
-          - 13.4 # swift 5.6
+  swift_test:
+    uses: bdrelling/workflows/.github/workflows/swift_test_universal_package_async.yml@main
     with:
-      xcode_version: ${{ matrix.xcode_version }}
-      platform: macOS
-      build_method: swift
-  swift_test_linux:
-    uses: bdrelling/workflows/.github/workflows/swift_test_linux.yml@main
-    needs: [prepare]
-    strategy:
-      fail-fast: false
-      matrix:
-        swift_version: [5.5, 5.6]
-    with:
-      swift_version: ${{ matrix.swift_version }}
-  send_notifications:
-    runs-on: ubuntu-latest
-    needs: [swift_test_apple, swift_test_linux]
-    if: failure()
-    steps:
-      - name: Send Discord Notification
-        uses: sarisia/actions-status-discord@v1
-        with:
-          webhook: ${{ secrets.DISCORD_CI_WEBHOOK }}
-          title: Tests Failed
-          status: Failure
-          color: 0xff0000
+      scheme: KippleTools-Package
