--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,3 +12,5 @@ jobs:
     uses: bdrelling/workflows/.github/workflows/swift_test_executable.yml@main
     with:
       scheme: KippleTools-Package
+    secrets:
+      DISCORD_CI_WEBHOOK: ${{ secrets.DISCORD_CI_WEBHOOK }}
