--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   swift_test:
-    uses: bdrelling/workflows/.github/workflows/swift_test_executable.yml@main
+    uses: bdrelling/ci/.github/workflows/swift_test_executable.yml@main
     with:
       scheme: KippleTools-Package
     secrets:
