--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Build
 
 on:
   workflow_dispatch:
@@ -9,8 +9,11 @@ on:
 
 jobs:
   swift_test:
-    uses: bdrelling/ci/.github/workflows/swift_test_executable.yml@main
-    with:
-      scheme: KippleTools-Package
+    uses: bdrelling/ci/.github/workflows/swift_test.yml@main
     secrets:
       DISCORD_CI_WEBHOOK: ${{ secrets.DISCORD_CI_WEBHOOK }}
+    with:
+      scheme: KipplePlugins-Package
+      subcommand: build
+      platforms: macOS Linux
+      swift-versions: 5.5 5.6
