--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,8 +11,9 @@ jobs:
   swift_test:
     uses: bdrelling/ci/.github/workflows/swift_test.yml@main
     secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       DISCORD_CI_WEBHOOK: ${{ secrets.DISCORD_CI_WEBHOOK }}
     with:
       scheme: KippleTools-Package
       platforms: macOS Linux
-      # swift-versions: default
+      code-coverage: true
